--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "watch": "tsc -w",
     "clean": "rimraf lib",
     "copy": "cp src/index.html lib/index.html",
-    "copy:jl": "cp src/server.jl src/Project.toml src/Manifest.toml -t lib",
+    "copy:jl": "cp src/julia/server.jl src/julia/Project.toml src/julia/Manifest.toml -t lib",
     "build": "npm run compile && webpack --mode=development && npm run copy && npm run copy:jl",
     "start": "node lib/server.js",
     "start:ext": "node lib/server.js --external"
