--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "name": "node-example",
   "version": "0.13.0",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "monaco-editor-core": "^0.20.0",
     "monaco-languageclient": "^0.13.0",
@@ -24,14 +25,14 @@
     "copy": "cp src/index.html lib/index.html",
     "copy:jl": "cp src/julia/server.jl src/julia/Project.toml src/julia/Manifest.toml -t lib",
     "build": "npm run compile && webpack --mode=development && npm run copy && npm run copy:jl",
-    "start": "node lib/server.js",
-    "start:ext": "node lib/server.js --external"
+    "start": "node lib/server.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.5",
     "@types/ws": "^7.2.4",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^1.8.0",
     "file-loader": "^6.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
