--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,12 @@
   "name": "node-example",
   "version": "0.13.0",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "monaco-editor-core": "^0.20.0",
     "monaco-languageclient": "^0.13.0",
     "normalize-url": "^5.0.0",
     "reconnecting-websocket": "^3.2.2",
     "request-light": "^0.3.0",
-    "vscode-json-languageservice": "^3.6.0",
     "vscode-jsonrpc": "^5.0.1",
     "vscode-languageserver": "^6.1.1",
     "vscode-uri": "^2.1.1",
@@ -23,7 +21,7 @@
     "watch": "tsc -w",
     "clean": "rimraf lib",
     "copy": "cp src/index.html lib/index.html",
-    "copy:jl": "cp src/julia/server.jl src/julia/Project.toml src/julia/Manifest.toml -t lib",
+    "copy:jl": "cp src/julia/server.jl src/julia/Project.toml src/julia/Manifest.toml -t lib && cp -r src/code lib/code",
     "build": "npm run compile && webpack --mode=development && npm run copy && npm run copy:jl",
     "start": "node lib/server.js"
   },
@@ -32,7 +30,6 @@
     "@types/node": "^14.0.5",
     "@types/ws": "^7.2.4",
     "css-loader": "^3.5.3",
-    "dotenv-webpack": "^1.8.0",
     "file-loader": "^6.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
