--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "name": "node-example",
   "version": "0.13.0",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "monaco-editor-core": "^0.20.0",
     "monaco-languageclient": "^0.13.0",
