improved code structure

--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,11 @@
 # Julia settings
 PROJECT_PATH = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/lib
 SERVER_FILE = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/lib/server.jl
-SOURCE_PATH = /home/borghi/.julia/environments/v1.5
+SOURCE_PATH = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/envs
 DEPOT_PATH =
 STORE_PATH = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/cache
 
 # Server connection
 HOST = localhost
 PORT = 3000
-CHANNEL = /sampleServer
+CHANNEL = /JuliaLanguageServer
