--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,83 @@
 {
-    "name": "monaco-languageclient",
-    "version": "0.13.0",
-    "description": "Monaco Language client implementation",
-    "author": "TypeFox GmbH (http://www.typefox.io)",
-    "license": "MIT",
-    "engines": {
-        "vscode": "^1.41.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/TypeFox/monaco-languageclient.git"
-    },
-    "bugs": {
-        "url": "https://github.com/TypeFox/monaco-languageclient/issues"
-    },
-    "main": "./lib/index.js",
-    "typings": "./lib/index",
-    "dependencies": {
-        "glob-to-regexp": "^0.3.0",
-        "vscode-jsonrpc": "^5.0.0",
-        "vscode-languageclient": "^6.0.0",
-        "vscode-uri": "^2.1.1"
-    },
-    "scripts": {
-        "prepare": "yarn run clean && yarn run compile",
-        "compile": "tsc",
-        "watch": "tsc -w",
-        "clean": "rimraf lib",
-        "prepublishOnly": "yarn run dist:amd",
-        "dist:amd": "tsc --outDir dist/amd --module amd"
-    },
-    "workspaces": [
-        ".",
-        "workspace-a",
-        "workspace-b"
-    ]
+  "name": "JuliaLanguageServer",
+  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack",
+    "flow": "flow",
+    "start:dev": "cross-env NODE_ENV=development  webpack serve --hot --inline --history-api-fallback",
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/tests/__mocks__/styleMock.js"
+    }
+  },
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.17",
+    "@babel/runtime": "^7.12.18",
+    "@codingame/monaco-jsonrpc": "^0.3.1",
+    "babel-polyfill": "^6.26.0",
+    "buffer": "^6.0.3",
+    "monaco-editor": "0.21.2",
+    "monaco-editor-core": "0.21.2",
+    "monaco-editor-webpack-plugin": "2.1.0",
+    "monaco-languageclient": "0.13.1-next.4",
+    "monaco-themes": "^0.3.3",
+    "normalize-url": "^5.3.0",
+    "reconnecting-websocket": "^4.4.0",
+    "setimmediate": "^1.0.5",
+    "typescript": "^4.1.5",
+    "vscode-jsonrpc": "^6.0.0",
+    "vscode-languageserver-protocol": "^3.16.0",
+    "vscode-ws-jsonrpc": "^0.2.0",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.17",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
+    "@babel/plugin-proposal-function-sent": "^7.12.13",
+    "@babel/plugin-proposal-json-strings": "^7.12.13",
+    "@babel/plugin-proposal-numeric-separator": "^7.12.13",
+    "@babel/plugin-proposal-throw-expressions": "^7.12.13",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-stage-2": "^7.8.3",
+    "@babel/preset-typescript": "^7.12.17",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-check-es2015-constants": "^6.22.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "flow-bin": "^0.145.0",
+    "html-loader": "^2.0.0",
+    "html-webpack-plugin": "^5.1.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.8",
+    "node-sass": "^5.0.0",
+    "parcel-bundler": "^1.12.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "sass-loader": "^11.0.1",
+    "source-map-loader": "^2.0.1",
+    "style-loader": "^2.0.0",
+    "webpack-dev-server": "^3.11.2",
+    "worker-loader": "^3.0.8"
+  }
 }
