--- a/server/package.json
+++ b/server/package.json
@@ -1,43 +1,40 @@
 {
-  "private": true,
-  "name": "node-example",
-  "version": "0.13.0",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "monaco-editor-core": "^0.20.0",
-    "monaco-languageclient": "^0.13.0",
-    "normalize-url": "^5.0.0",
-    "reconnecting-websocket": "^3.2.2",
-    "request-light": "^0.3.0",
-    "vscode-jsonrpc": "^5.0.1",
-    "vscode-languageserver": "^6.1.1",
-    "vscode-uri": "^2.1.1",
-    "vscode-ws-jsonrpc": "^0.2.0",
-    "ws": "^7.3.0"
-  },
+  "name": "language-server",
+  "version": "1.0.0",
+  "description": "Julia Language Server",
+  "main": "index.js",
   "scripts": {
     "prepare": "npm run clean && npm run build",
     "compile": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf lib",
-    "copy": "cp src/index.html src/favicon.ico -t lib",
-    "copy:jl": "cp src/julia/server.jl src/julia/Project.toml src/julia/Manifest.toml -t lib",
-    "build": "npm run compile && webpack --mode=development && npm run copy && npm run copy:jl",
+    "copy": "cp src/julia/server.jl src/julia/Project.toml src/julia/Manifest.toml -t lib",
+    "build": "npm run compile && webpack --mode=development && npm run copy",
     "start": "node lib/server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/node": "^14.0.5",
-    "@types/ws": "^7.2.4",
-    "css-loader": "^3.5.3",
-    "file-loader": "^6.0.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.2.1",
-    "typescript": "^3.9.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2"
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
+    "@types/ws": "^7.4.0",
+    "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "source-map-loader": "^2.0.1",
+    "style-loader": "^2.0.0",
+    "typescript": "^4.1.5",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-merge": "^5.7.3",
+    "webpack-node-externals": "^2.5.2"
+  },
+  "dependencies": {
+    "@codingame/monaco-jsonrpc": "^0.3.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "vscode-languageserver": "^7.0.0",
+    "vscode-ws-jsonrpc": "^0.2.0",
+    "ws": "^7.4.3"
   }
 }
