use relative path in .env file

--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,9 @@
-# Julia settings
-PROJECT_PATH = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/lib
-SERVER_FILE = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/lib/server.jl
-SOURCE_PATH = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/envs
+# Julia settings: using relative paths
+PROJECT_PATH = lib
+SERVER_FILE = lib/server.jl
+SOURCE_PATH = envs
 DEPOT_PATH =
-STORE_PATH = /home/borghi/Desktop/Matias/umc/monaco-editor-julia-language-server/server/cache
+STORE_PATH = cache
 
 # Server connection
 HOST = localhost
