--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.12.17",
     "@babel/runtime": "^7.12.18",
     "@codingame/monaco-jsonrpc": "^0.3.1",
+    "@material-ui/core": "^4.11.3",
     "babel-polyfill": "^6.26.0",
     "buffer": "^6.0.3",
     "monaco-editor": "0.21.2",
